<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </ProgressBar>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        android:hint="@string/username"
        android:maxLength="30"
        android:maxLines="1" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="30"
        android:maxLines="1" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        android:hint="@string/first_name"
        android:maxLength="30"
        android:maxLines="1" />

    <EditText
        android:id="@+id/secondNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        android:hint="@string/second_name"
        android:maxLength="30"
        android:maxLines="1" />

    <CheckBox
        android:id="@+id/isStudentCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_student"
        />
<!--android:layout_marginBottom="65dp"-->

    <Button
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_registration"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="100dp"/>

</LinearLayout>